# smithy_todolist

./: .babelrc  .gitignore  Cargo.toml  Makefile  README.md  package.json  webpack.config.babel.js
scripts/: serve.js
src/: api.rs  app.rs  detail_view.rs  home.rs  input.rs  lib.rs  types.rs  util.rs
static/: index.html  index.js
