[package]
name = "smithy_site_routing"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "< 0.2.39", features = ["nightly", "serde-serialize"] }
smithy = { path = "../smithy/crates/smithy", features = ["mouse-events", "input-events"] }
web-sys = { version = "0.3.5", features = [
  "console",
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "Location",

  # elements
  "HtmlInputElement",

] }
js-sys = "0.3.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"

[replace]
"proc-macro2:0.4.27" = { path = "../smithy/crates/proc-macro2" }
