[package]
name = "smithy_todolist"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "< 0.2.39", features = ["nightly", "serde-serialize"] }
# smithy = { git = "https://github.com/rbalicki2/smithy", features = [
smithy = { path = "../smithy/crates/smithy", features = [
  "mouse-events",
  "input-events",
  # "debug-logs",
] }
web-sys = { version = "0.3.5", features = [
  # "console",
  # "Document",
  # "DocumentFragment",
  "Element",
  # "Window",
  "Location",

  # elements
  "HtmlInputElement",

  # For fetching
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
] }
basic_futures = { git = "https://github.com/rbalicki2/basic_futures" }
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"
js-sys = "0.3.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
lazy_static = "1.2.0"

[replace]
# "proc-macro2:0.4.27" = { git = "https://github.com/rbalicki2/smithy" }
"proc-macro2:0.4.27" = { path = "../smithy/crates/proc-macro2" }
